--- a/css/lifer-profiles.css
+++ b/css/lifer-profiles.css
@@ -545,6 +545,8 @@ font-family: 'Antic Didone', serif;
 
 .sponsor {
   margin:0 auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 #hc {
@@ -652,27 +654,27 @@ font-family: 'Antic Didone', serif;
 
     p{
       font-size: 1.1em;
-      width: 80%;
+      width: 90%;
     }
 
     .video-content{
-      width: 80%;
+      width: 90%;
     }
 
     .incarceration-graph{
-      width: 80%;
+      width: 90%;
     }
 
     .about{
-      width: 70%;
+      width: 80%;
     }
 
     .final-credits{
-      width: 70%;
+      width: 80%;
     }
 
     .more{
-      width: 80%;
+      width: 90%;
     }
 
   .date{
@@ -730,7 +732,7 @@ font-family: 'Antic Didone', serif;
     transform: translate(-50%, -50%);
   }
   .article-title{
-    font-size: 3em;
+    font-size: 2.5em;
   }
 
   .article-desc{
