--- a/css/lomax.css
+++ b/css/lomax.css
@@ -522,6 +522,8 @@ font-size: 1.5em;
 
 .sponsor {
   margin:0 auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 #hc {
@@ -626,11 +628,11 @@ font-size: 1.5em;
 
     p{
       font-size: 1.1em;
-      width: 80%;
+      width: 90%;
     }
 
     .pullquote{
-      width: 80%;
+      width: 90%;
       font-size: 1.1em;
     }
 
@@ -639,19 +641,19 @@ font-size: 1.5em;
     }
 
     .incarceration-graph{
-      width: 80%;
+      width: 90%;
     }
 
     .about{
-      width: 70%;
+      width: 80%;
     }
 
     .final-credits{
-      width: 70%;
+      width: 80%;
     }
 
     .more{
-      width: 80%;
+      width: 90%;
     }
   .date{
     font-size: .8em;
@@ -724,7 +726,7 @@ font-size: 1.5em;
     transform: translate(-50%, -50%);
   }
   .article-title{
-    font-size: 3em;
+    font-size: 2.5em;
   }
 
   .article-desc{
