--- a/css/glendening-effect.css
+++ b/css/glendening-effect.css
@@ -174,6 +174,14 @@ p{
     border-bottom: 1px solid white;
   }
 
+  .incarceration-graph-race{
+    width: 60%;
+    margin: 0 auto;
+    font-family: 'Muli', sans-serif;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+
   .author{
     font-size: 18px;
     font-family: 'Lora', serif;
@@ -563,6 +571,8 @@ table{
 
 .sponsor {
   margin:0 auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 #hc {
@@ -648,6 +658,10 @@ table{
   .incarceration-graph{
     width: 70%;
   }
+
+  .incarceration-graph-race{
+    width: 70%;
+  }
   .more{
     width: 70%;
   }
@@ -705,37 +719,45 @@ table{
 
     p{
       font-size: 1.1em;
-      width: 80%;
+      width: 90%;
     }
 
     .headline{
-      width: 80%;
+      width: 90%;
       font-size: 1.7em;
     }
 
     .infobox{
-      width: 80%;
+      width: 90%;
       font-size: 1.1em;
     }
 
     .video-content{
-      width: 80%;
+      width: 90%;
     }
 
     .incarceration-graph{
-      width: 80%;
+      width: 90%;
+    }
+
+    .incarceration-graph-race{
+      display: none;
+    }
+
+    .mobile-hide{
+      display: none;
     }
 
     .about{
-      width: 70%;
+      width: 80%;
     }
 
     .final-credits{
-      width: 70%;
+      width: 80%;
     }
 
     .more{
-      width: 80%;
+      width: 90%;
     }
 
   .date{
@@ -810,7 +832,7 @@ table{
     transform: translate(-50%, -50%);
   }
   .article-title{
-    font-size: 3em;
+    font-size: 2.5em;
   }
 
   .article-desc{
